# simulacat

./: .gitignore  AGENTS.md  Makefile  README.md  biome.jsonc  package.json  pyproject.toml  tsconfig.json  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/actions/build-wheels/: action.yml
.github/actions/pure-python-wheel/: action.yml
.github/workflows/: build-wheels.yml  ci.yml  compatibility-matrix.yml  dependabot-automerge.yml  mutation-testing.yml  release.yml
.rules/: python-exception-design-raising-handling-and-logging.md  python-generators.md  python-pyproject.md  python-return.md  python-typing.md
docs/: changelog.md  configuring-biome.md  developers-guide.md  roadmap.md  scripting-standards.md  simulacat-design.md  users-guide.md
docs/execplans/: 2-2-1-named-scenario-factories.md  3-1-1-optional-token-support-in-client.md  3-1-2-configuration-helpers-for-git-hub-apps-amd-o-auth.md  3-1-3-document-limitations-of-auth-modes.md  3-2-1-reference-projects.md  4-1-1-compatibility-matrix.md  4-2-1-api-stability-and-deprecation-policy.md
examples/reference-projects/authenticated-pytest/: README.md  pyproject.toml
examples/reference-projects/authenticated-pytest/.github/workflows/: ci.yml
examples/reference-projects/authenticated-pytest/tests/: test_authenticated_simulator_smoke.py
examples/reference-projects/basic-pytest/: README.md  pyproject.toml
examples/reference-projects/basic-pytest/.github/workflows/: ci.yml
examples/reference-projects/basic-pytest/tests/: test_basic_simulator_smoke.py
simulacat/: __init__.py  _validation_helpers.py  api_stability.py  app_validation.py  compat.py  compatibility_policy.py  config.py  fixtures.py  install_simulator_deps.py  issue_validation.py  js_root.py  orchestration.py  pure.py  pytest_plugin.py  scenario.py  scenario_config.py  scenario_factories.py  scenario_models.py  types.py
simulacat/unittests/: __init__.py  test_api_stability.py  test_auth_mode_limitations.py  test_auth_tokens.py  test_compatibility_matrix_policy.py  test_fixtures.py  test_github_app.py  test_github_sim_config.py  test_github_simulator.py  test_install_simulator_deps.py  test_js_root.py  test_orchestration.py  test_reference_projects.py  test_scenario_config.py  test_scenario_factories.py
src/: github-sim-server.test.ts  github-sim-server.ts
tests/: __init__.py  conftest.py  github_protocols.py  reference_project_paths.py  test_github3_compat.py
tests/features/: api_stability.feature  auth_mode_limitations.feature  compatibility_matrix.feature  github_app.feature  github_sim_config.feature  github_sim_config_fixture.feature  github_simulator.feature  github_simulator_auth.feature  reference_projects.feature  scenario_config.feature  scenario_factories.feature  simulator_orchestration.feature
tests/steps/: __init__.py  test_api_stability.py  test_auth_mode_limitations.py  test_compatibility_matrix.py  test_github_app.py  test_github_sim_config.py  test_github_sim_config_fixture.py  test_github_simulator.py  test_github_simulator_auth.py  test_reference_projects.py  test_scenario_config.py  test_scenario_factories.py  test_simulator_orchestration.py
tests/workflow_contracts/: __init__.py  test_mutation_testing.py
